Button to top to avoid iOS landscape "feature"
iOS does a funny thing in landscape mode where it adds extra space at
the bottom of the page. This is supposedly a "feature." Put the button
at the top of the page instead of the bottom so we don't run into
trouble here.

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,7 +32,7 @@ body {
 
   position: absolute;
   right: 20px;
-  bottom: 20px;
+  top: 20px;
 
   opacity: 0.01;
   transition: opacity 500ms;
